@@ -1,3 +1,4 @@
+* avoid loops in Experiment.Q2Ang functions
 * clean README and add new CONTRIBUTIONS instructions
 
 v1.5.0, 2018-07-04
